# Elevator-Simulator

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: ci.yml
db/: setup.sh
docker/: Dockerfile
docs/: Design.md
include/: DatabaseLogger.h  Elevator.h  ElevatorController.h  ElevatorServer.h  MockDatabaseLogger.h  UserInterface.h
include/model/: Elevator.h
src/: CMakeLists.txt  DatabaseLogger.cpp  DemoRunner.cpp  DemoRunner.h  Elevator.cpp  ElevatorController.cpp  ElevatorServer.cpp  UserInterface.cpp  elevator_client.cpp  main.cpp
tests/: CMakeLists.txt  multi_terminal_test.py  request_generator.py  test_controller.cpp  test_elevator.cpp  test_emergency.cpp
